layout issue in summary widget resolved

--- a/rb/static/widget/css/widget.css
+++ b/rb/static/widget/css/widget.css
@@ -123,7 +123,7 @@ div.rdr_sandbox div.rdr_actionbar li a span.rdr_react_icon {
 div.rdr_sandbox span.rdr_react_label {
   font-size:12px !important;
   font-weight:bold !important;
-  padding:4px 0px !important;
+  padding:0px !important;
   display: inline-block !important;
   cursor:pointer !important;
 }
@@ -660,31 +660,6 @@ div.rdr_sandbox div.rdr-board-create-div iframe {
   width:625px !important;
 }
 
-/* maybe removeable */
-/*
-div.rdr div.rdr_tag     { 
-    color: #fff !important;
-    cursor: pointer !important;
-    display: inline-block !important;
-    font-family:'Helvetica',Arial,sans-serif !important;
-    font-size: 14px !important;
-    font-style: normal !important;
-    font-weight: bold !important;
-    position: relative !important;
-    text-decoration: none !important;
-    text-transform: none !important;
-    z-index:10001 !important;
-    text-align: center !important;
-    vertical-align: middle !important;
-    -webkit-box-sizing : border-box !important;
-    -moz-box-sizing : border-box !important;
-    -o-box-sizing : border-box !important;
-    box-sizing : border-box !important;
-}
-div.rdr.rdr-summary a.rdr_tag {
-  font-size:11px !important;
-}
-*/
 /* maybe removeable: rdr_tag_detail */
 div.rdr_sandbox div.rdr_tag_details {
   position:absolute !important;
@@ -751,9 +726,6 @@ div.rdr.rdr-summary div.rdr_info ins        { text-decoration:none !important; }
 div.rdr.rdr-summary div.rdr_info ins img    { margin:0 !important; padding:0 !important; border:0 !important;}
 div.rdr.rdr-summary div.rdr_info strong.rdr_share_it    { margin-left:10px !important;border-left:1px solid #ccc !important;padding-left:10px !important;}
 div.rdr.rdr-summary div.rdr_info a.rdr_share_link img    { max-width:20px !important;margin:0 5px -5px 0 !important; float:none !important;}
-
-div.rdr.rdr-summary img.rdr_summary_help  { border:0 !important;position:absolute !important;right:3px !important;top:3px !important;background:url(../images/readr_icons.png) -96px -1px no-repeat !important;cursor:pointer !important;width:13px !important;height:13px !important; }
-div.rdr.rdr-summary img.rdr_summary_help:hover  { background-position: -79px -1px !important; }
 
 /*consolotate with above.*/
 div.rdr_sandbox div.rdr_info {padding: 10px 10px 2px 10px !important;}
@@ -845,6 +817,9 @@ div.rdr.rdr-summary #rdr-user a {
   font-style:normal !important;
   color:#008be4 !important;
 }
+div.rdr_sandbox div.rdr div.rdr_footer.rdr_cta .rdr_what_is_it { border-left:1px solid #ccc; }
+div.rdr_sandbox div.rdr.w160 div.rdr_footer.rdr_cta .rdr_what_is_it,
+div.rdr_sandbox div.rdr.w320 div.rdr_footer.rdr_cta .rdr_what_is_it { border-top:1px solid #ccc; border-left:none;padding:8px 4px 0 !important;}
 
 div.rdr.rdr-summary div.rdr-see-more {
     background: url("../images/readr_icons.png") repeat scroll -225px 0px transparent !important;
